...
            Spacer(Modifier.height(20.dp))
            Group(
                null,
                listOf<@Composable () -> Unit>(
                    {
                        SettingRow(
                            headline = "Advanced",
                            modifier = Modifier.clickable { advanced = !advanced },
                            trailing = { Icon(if (advanced) Icons.Filled.KeyboardArrowUp else Icons.Filled.KeyboardArrowDown, contentDescription = null) },
                        )
                    },
                ),
            )
...
